# focustoearn

./: README.md
backend/: README.md
backend/service/: .eslintrc.js  .gitignore  .mocharc.js  module.d.ts  package-lock copy.json  package-lock.json  package.json  rollup.config.js
backend/service/flow-typed/npm/: bn.js_vx.x.x.js
backend/service/src/: service.js
backend/service/src/config/: amm.js  farm-bridge.js  farms.js  safe-math.js  tokens.js
backend/service/src/deploy/: contract.json  init.js  main.js  service.js
contract/: Anchor.toml  Cargo.toml  package-lock.json  package.json
contract/ap/: package-lock.json  package.json
contract/ap/src/: App.js  contract.json
contract/app/: package-lock.json  package.json
contract/app/src/: App.js  idl.json
contract/one/: programId.js  programId.ts
contract/one/instructions/: index.ts  initToken.ts  initialize.ts  mintNft.ts  mintToken.js  mintToken.ts  nftTransfer.ts  transferToken.ts  withdrawToken.ts
contract/programs/contract/: Cargo.toml
contract/programs/contract/src/: focusnft.rs  lib.rs
contract/programs/contract/src/math/: common.rs  mod.rs
contract/programs/contract/src/processor/: initialize_pool.rs  mod.rs
contract/programs/contract/src/state/: pool.rs
contract/tests/: contract.js  contract.ts  metaplex-anchor-nft.ts
frontend/: .gitignore  README.md  build.gradle  gradle.properties  local.properties  settings.gradle
frontend/app/: build.gradle  focus.jks  focus.jks.old
frontend/gradle/wrapper/: gradle-wrapper.properties
frontend/solana/: build.gradle
(+164 files in other folders)
