[package]
name = "contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "contract"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
vipers = "2.0.6"
borsh = "0.9"
mpl-token-metadata = {version = "1.2.7", features = ["no-entrypoint"]}
spl-token = {version = "3.3.0", features = ["no-entrypoint"]}